<resources>
    <string name="app_name">中医耳疗</string>
    <string name="setting">设置</string>
    <string name="what">什么是中医耳疗</string>
    <string name="xuewei">穴位</string>
    <string name="knowledge">中医耳疗知识</string>
    <string name="advantage">耳疗优点</string>
    <string name="culture">中医文化</string>
    <string name="develop">当代发展</string>
    <string name="cure">中医耳疗</string>
    <string name="about">关于我们</string>
    <string name="edition">版本信息</string>
    <string name="distinguish1">耳垂上线：指过屏间切迹下缘与轮垂切迹所做的直线，是耳垂与耳廓其他部分的分界线。
    耳舟凹沟线：指耳舟最凹陷处的连线。</string>
    <string name="distinguish2">对耳轮脊线：指在对耳轮体部及对耳轮上下脚最隆起处的连线。</string>
    <string name="distinguish3">对耳轮耳舟缘线：指在对耳轮脊线与耳舟凹沟线之问的弧线，是对耳轮与耳舟的分界线。</string>
    <string name="distinguish4">耳轮上脚下缘线：指从对耳轮上下脚分叉处向对耳轮耳舟缘线做的垂直线，是对耳轮上脚与对耳轮体部的分界线。</string>
    <string name="distinguish5">对耳轮下脚后缘线：指从对耳轮上下脚分叉处向对耳轮耳甲缘线所做的垂直线，是对耳轮下脚与对耳轮体部的分界线。</string>
    <string name="distinguish6">耳甲折线：指耳甲内平坦部与隆起部之间的连线。</string>
    <string name="distinguish7">对耳轮耳甲缘线：指对耳轮脊线与耳甲折线之间的弧线，是对耳轮与耳甲的分界线。</string>
    <string name="distinguish8">为定好耳甲的穴位而设定A、B、C、D点和AB、BC、BD线。
A点：指从耳轮脚切迹至对耳轮下脚上缘同水平的耳轮上、中1／3交界点。
B点：指耳轮脚消失处至D点连线的中、后(或称中、fib)1／3交点。    C点：指外耳道VI后半边缘上1／4与下3／4的交点。
D点：从耳轮脚消失处向后外做一条水平线j与对耳轮耳甲缘线的交点。
AB线：由A点向B点做一条与对耳轮耳甲艇缘弧度大体相仿的曲线，可从横向划分耳甲艇的穴区。
BC线：由B点向C点做一条与耳轮脚下缘弧度大体相仿的曲线，该线从横向划分耳甲腔中的穴区。
BD线：是B点与D点的连线，即肝区与脾区的分界线。</string>
    <string name="qubie1">耳穴的分区</string>
    <string name="qubie2">(1)耳轮分区  将耳轮分为12区。耳轮脚为耳轮一区。耳轮脚切迹到对耳轮下脚上缘之间的耳轮分为3等份，自下而上依次为耳轮二区、三区、四区；对耳轮下脚上缘到对耳轮上脚前缘之间的耳轮为耳轮五区；对耳轮上脚前缘到耳尖之间的耳轮为耳轮六区，耳尖到耳轮结节上缘为耳轮七区；耳轮结节上缘到耳轮结节下缘为耳轮八区。耳轮结节下缘到轮垂切迹之间的耳轮分为4等份，自上而下依次为耳轮九区、十区、十一区和十二区。   </string>
    <string name="qubie3">(2)耳舟分区  将耳舟分为6等份，自上而下依次为耳舟一区、二区、三区、四区、五区、六区。</string>
    <string name="qubie4">(3)对耳轮分区  将对耳轮分为13区。对耳轮上脚分为上、中、下3等份，下1／3为对耳轮五区，中1／3为对耳轮四区；再将上1／3分为上、下2等份，下1／2为对耳轮三区，再将上1／2分为前后2等份，后1／2为对耳轮二区，前1／2为对耳轮一区。对耳轮下脚分为前、中、后3等份，中、前2／3为对耳轮六区，后1／3为对耳轮七区。将对耳轮体从对耳轮上、下脚分叉处至轮屏切迹分为5等份，再沿对耳轮耳甲缘将对耳轮体分为前1／4和后3／4两部分，前上2／5为对耳轮八区，后上2／5为对耳轮九区，前中2／5为对耳轮十区，后中2／5为对耳轮十一区，前下1／5为对耳轮十二区，后下1／5为对耳轮十三区。</string>
    <string name="qubie5">(4)三角窝分区  将三角窝由耳轮内线至对耳轮上、下脚分叉处分为前、中、后3等份，中1／3为三角窝三区；再将前1／3分为上、中、下3等份，上1／3为三角窝一区，中、下2／3为3角窝二区；再将后1／3分为上、下2等份，上1／2为三角窝四区，下1／2为三角窝五区。</string>
    <string name="qubie6">(5)耳屏分区  将耳屏分成4区。耳屏外侧面分为上、下2等份，上部为耳屏一区，下部为耳屏二区。将耳屏内侧面分为上、下2等份，上部为耳屏三区，下部为耳屏四区。</string>
    <string name="qubie7">(6)对耳屏分区  将对耳屏分为4区。由对屏尖及对屏尖至轮屏切迹连线之中点，分别向耳垂上线做两条垂线，将对耳屏外侧面及其后部分成前、中、后3区，前为对耳屏一区、中为对耳屏二区、后为对耳屏三区。对耳屏内侧面为对耳屏四区。</string>
    <string name="qubie8">
        (7)耳甲分区  将耳甲用标志点、线分为18个区。在耳轮的内缘上，设耳轮脚切迹至对耳轮下脚间中、上1／3交界处为A点；在耳甲内，由耳轮脚消失处向后做一条水平线与对耳轮耳甲缘相交，设交点为D点；设耳轮脚消失处至D点连线中、后1／3交界处为B点；设外耳道口后缘上1／4与下3／4交界处为C点；从A点向B点做一条与对耳轮耳甲艇缘弧度大体相仿的曲线；从B点向C点做一条与耳轮脚下缘弧度大体相仿的曲线。将BC线前段与耳轮脚下缘间分成3等份，前1／3为耳甲一区，中1／3为耳甲二区，后1／3为耳甲三区。ABC线前方，耳轮脚消失处为耳甲四区。将AB线前段与耳轮脚上缘及部分耳轮内缘间分成3等份，后1／3为五区，中1／3为六区，前1／3为七区。将对耳轮下脚下缘前、中1／3交界处与A点连线，该线前方的耳甲艇部为耳甲八区。将AB线前段与对耳轮下脚下缘间耳甲8区以后的部分，分为前、后2等份，前1／2为耳甲九区，后1／2为耳甲十区。在AB线后段上方的耳甲艇部，将耳甲十区后缘与BD线之间分成上、下2等份，上1／2为耳甲十一区，下1／2为耳甲十二区。由轮屏切迹至B点做连线，该线后方、BD线下方的耳甲腔部为耳甲十三区。以耳甲腔中央为圆心，圆心与BC线间距离的1／2为半径做圆，该圆形区域为耳甲十五区。过十五区最高点及最低点分别向外耳门后壁做两条切线，切线间为耳甲十六区。十五、十六区周围为耳甲十四区。将外耳门的最低点与对耳屏耳甲缘中点相连，再将该线以下的耳甲腔部分为上、下2等份，上1／2为耳甲十七区，下1／2为耳甲十八区。
    </string>
    <string name="qubie9">(8)耳垂分区  将耳垂分为9区。在耳垂上线至耳垂下线最低点之间划两条等距离平行线，于上平行线上引两条垂直等份线，将耳垂分为9个区，上部由前到后依次为耳垂一区、二区、三区；中部由前到后依次为耳垂四区、五区、六区；下部由前到后依次为耳垂七区、八区、九区。 </string>
    <string name="qubie10">(9)耳背分区  将耳背分为5区。分别过对耳轮上、下脚分叉处耳背对应点和轮屏切迹耳背对应点做两条水平线，将耳背分为上、中、下3部，上部为耳背一区，下部为耳背五区。再将中部分为内、中、外3等份，内1／3为耳背二区、中1／3为耳背三区、外1／3为耳背四区。</string>
    <string name="what_string">当人体发生疾病时，常会在耳廓的相应部位出现"阳性反应"点，如压痛、变形（隆起、
凹陷、皱褶）、变色（充血、缺血、色素沉着）、水疱、结节、丘疹、凹陷、脱屑、电阻
降低等，这些反应点就是耳针防治疾病的刺激点，如能再对这些穴位进行刺激，便会使病
态逐渐退却，症状消失，病状痊愈</string>
    <string name="what_catalog">毫针、埋针、艾灸、放血、按摩、压豆、耳穴注射、贴膏、磁疗等。我们主要介绍耳
穴压豆法，即我们常说的贴耳穴。
    </string>
    <string name="what_method">即在耳穴表面贴敷压丸替代埋针的一种简易疗法，具有适用范围广、能防能治、副作
用少、可补中药体针之不足、简便易行的治疗特点。 压丸所选材料可就地取材，如王不留
行籽、油菜籽、小米、绿豆、白芥子等。临床现多用王不留行籽和磁珠，因其表面光滑，
大小和硬度适宜。适应范围：遍及内、外、妇、儿、神经、五官、皮肤等科。此外，还可用于戒烟、
戒酒、戒毒和催产、催乳等。其中有许多病症可单独用本疗法，有的则宜配合其他疗
法进行治疗。
    禁忌症：①外耳湿疹、溃疡、冻疮溃破等情况不宜用。②严重器质性疾病，如高度
贫血、血友病等。③严重心脏病不宜使用。④妇女怀孕期间须慎用，有习惯性流产史
的孕妇当禁用
    </string>
    <string name="theory_ancient">1、耳与脏腑的关系密切：《灵枢•脉度》“肾气通于耳，肾和则耳能五音耳”;《千金方》
“心气通于舌，非窍也，其通于窍者，寄见于；耳，荣华于耳”； 心肺合司宗气上贯于耳。
肝藏血耳受血始能有听觉；脾胃升清阳于耳,耳方可闻及等等。
2、耳与经络的关系密切：“耳为宗脉之所聚”耳为全身经络分布最密之处，十二经脉、
三百六十五络的别气都走于耳，其中足少阳胆经、手少阳三焦经、足阳明胃经、手太阳小
肠经、足太阳膀胱经。
通过其疏通经络，推动、驱散病灶中郁滞的气血和病气，调节脏腑气血功能，促进
机体的阴阳平衡，以达到治疗疾病的目的。
    </string>
    <string name="theory_modern">
   1、神经、体液学说：耳穴良性刺激使全身组织器官通过神经和体液综合调节实现，特
点是双向调节作用。
2、全息生物学说：脑内神经元作为反射中枢，形成全息反应路，阐述人体病灶与耳穴
之间有直接联系。
    </string>
    <string name="op_clear">用 75%酒精棉球或棉签对全耳耳廓进行擦拭消毒，脱去耳廓上的皮脂，以利于耳贴贴紧</string>
    <string name="op_sever">a、数钱：以拇指与食中两指夹着耳廓上下搓动，一分钟。
b、挖耳朵：以食指和拇指挖耳周，耳甲腔，耳甲艇，耳背沟等凹陷一分钟。
c、拉扯：拇指与食中两指夹着上耳廓，把耳廓往上下，翻前，拉后，各五秒。
d、搓耳根：以食指和中指贴着脑袋，夹着耳根部，上下搓动，五十次。
</string>
    <string name="op_operation">a、通过镊子尾部、棉签或者止血钳等按压耳廓取最痛点。
b、用止血钳或镊子取耳贴，贴在穴位上。
c、用拇指和食指，按压已贴耳贴的耳廓腹背两侧（如所取耳穴在耳甲腔、耳甲庭等部。
位，则用食指或拇指单指按压），逐渐施加压力，把耳贴压紧，力度以可以承受的最大力
度为宜，一般按 2 分钟。
d、被贴耳穴者回去后仍须常常按压耳贴(每天 5、6 次)。
e、每贴一次耳穴三四天后撕去耳贴，贴五次为一个疗程，疗程间需休息一两天，贴多少
疗程因疾病不同而不定。
   </string>
   <string name="notice">
       ①防止胶布潮湿或耳朵有耳油导致耳贴张力降低
②若对胶布过敏致耳廓红肿瘙痒，需立刻取下耳贴，然后按压肾上腺、过敏区
③耳廓有冻疮、炎症等不宜贴
④贴耳穴后，被贴者自行按摩时，以按压为主，切勿揉搓，以免搓破皮肤造成耳穴感染
⑤夏季汗多，宜勤换
⑥主穴+配穴，提倡少而精，一般贴 2-5 个穴位
⑦按压力度：辩证为首要 虚证应轻柔，小小刺激就好，因为患者要用正气抵抗按压的力度，
稍大都会耗气，令身体更虚，尤其体弱的老人，患者一直喊好痛痛痛，还说“痛是正常的”
那就不好了。实证力度可大一些，此才为可承受范围内最大力度。

   </string>
</resources>
