<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <android.support.v7.widget.CardView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:cardBackgroundColor="@color/card">
           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/distinguish1"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/distinguish2"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/distinguish3"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/distinguish4"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/distinguish5"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/distinguish6"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/distinguish7"/>
          <TextView
              android:id="@+id/textView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:text="@string/distinguish8"
              android:textSize="15sp"/>
           </LinearLayout>
          </android.support.v7.widget.CardView>

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:background="@drawable/earmark"
              android:scaleType="center"/>

          <android.support.v7.widget.CardView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:cardBackgroundColor="@color/card">

              <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie1"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie2"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie3"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie4"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie5"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie6"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie7"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie8"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie9"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:textSize="15sp"
              android:text="@string/qubie10"/>
              </LinearLayout>

          </android.support.v7.widget.CardView>

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:background="@drawable/earmarks"
              android:scaleType="centerCrop"/>
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:background="@drawable/perspective"
              android:scaleType="centerCrop"/>

      </LinearLayout>
    </ScrollView>
</LinearLayout>