<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TableLayout
    android:layout_height="454dp"
    android:layout_width="match_parent">
    <TableRow>
    <Button
    android:id="@+id/what_button"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="140dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="2dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="7dp"
    android:background="#7F333333"
    android:text="@string/what"
    style="@style/button"
    />

      <Button
        android:id="@+id/point_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="20dp"
        android:background="#7F333333"
        android:text="@string/xuewei"
        style="@style/button"
        />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/know_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="140dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="7dp"
            android:background="#7F333333"
            android:text="@string/knowledge"
            style="@style/button"
            />

        <Button
            android:id="@+id/good_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="140dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="20dp"
            android:background="#7F333333"
            android:text="@string/advantage"
            style="@style/button"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/culture_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="140dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="7dp"
            android:text="@string/culture"
            android:background="#7F333333"
            style="@style/button"
            />

        <Button
            android:id="@+id/develop_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="140dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="20dp"
            android:background="#7F333333"
            android:text="@string/develop"
            style="@style/button"
            />
    </TableRow>
</TableLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark">
    <ImageButton
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:background="@drawable/view"/>
    <ImageButton
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:background="@drawable/home"/>
    <ImageButton
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:background="@drawable/setting"/>
</LinearLayout>
</LinearLayout>