<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cure"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="22sp"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/activity_container"
            android:background="@color/card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11">
            <LinearLayou
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1.耳穴疗法"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_marginTop="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2.耳穴疗法分类"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_catalog"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="3.耳穴压豆法"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_method"
                    android:textSize="15sp"/>

            </LinearLayou>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

